--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-   <title>Node Workshop</title>
+   <title>X Perf Analytics</title>
  </head>
  <body>
      <h1 style="color: blue;">
-        Express: HELLO WORLD
+        Perf Analytics - Because Perf Matters
      </h1>
  </body>
 </html>
